# Corvid-lang

./: .env.example  .gitattributes  .gitignore  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  FEATURES.md  README.md  ROADMAP.md  dev-log.md  learnings.md
benches/corvid/tools/: Cargo.toml
crates/corvid-abi/: Cargo.toml
crates/corvid-abi-verify/: Cargo.toml
crates/corvid-abi-verify/src/: lib.rs  main.rs
crates/corvid-abi/src/: approval_contract.rs  attestation.rs  canonical_hash.rs  effect_emit.rs  embedded.rs  emit.rs  introspection_catalog.rs  lib.rs  provenance_emit.rs  schema.rs  signing.rs  tool_contract.rs  type_description.rs
crates/corvid-abi/tests/: approval_contract.rs  attributes.rs  build_integration.rs  byte_fuzz_corpus.rs  common.rs  determinism.rs  dispatch.rs  effect_emission.rs  embedded.rs  non_scalar_types.rs  provenance.rs  schema_roundtrip.rs  signature_emission.rs  store_metadata.rs
crates/corvid-bind/: Cargo.toml
crates/corvid-bind/src/: lib.rs  python_backend.rs  rust_backend.rs
crates/corvid-bind/tests/: generation.rs
crates/corvid-c-header/: Cargo.toml
crates/corvid-c-header/src/: lib.rs  scalar_marshal.rs  template.rs
crates/corvid-c-header/tests/: header_shape.rs
crates/corvid-cli/: Cargo.toml
crates/corvid-cli/src/: abi_cmd.rs  approver_cmd.rs  audit_cmd.rs  auth_cmd.rs  bench_cmd.rs  bind_cmd.rs  build_cmd.rs  capsule_cmd.rs  claim_cmd.rs  connectors_cmd.rs  contract_cmd.rs  cost_frontier.rs  deploy_cmd.rs  dispatch.rs  doctor_cmd.rs  eval_cmd.rs  format.rs  lineage_cmd.rs  main.rs  migrate_cmd.rs  observe_cmd.rs  observe_helpers_cmd.rs  package_cmd.rs  project_source.rs  receipt_cache.rs  receipt_cmd.rs  release_cmd.rs  replay.rs  routing_report.rs  run_cmd.rs  test_from_traces.rs  tour.rs  trace_cmd.rs  trace_dag.rs  upgrade_cmd.rs  verify_cmd.rs
crates/corvid-cli/tests/: abi_attestation.rs  abi_cmd.rs  approver_cmd.rs  audit_cmd.rs  auth_cmd.rs  bench_cmd.rs  build_cdylib.rs  build_server.rs  build_wasm.rs  bundle_integration.rs  bundle_lineage.rs  bundle_query.rs  bundle_rebuild.rs  bundle_support.rs  cdylib_catalog_demo.rs  check_validates_imports.rs  claim_cmd.rs  connectors_cmd.rs  demo_project_defaults.rs  doctor.rs  gitlab_format.rs  host_bindings_integration.rs  in_toto_format.rs  jobs.rs  migrate.rs  package_help.rs  receipt_signing.rs  reference_apps.rs  repl_smoke.rs  routing_report.rs  stacked_driver.rs  trace_diff.rs
crates/corvid-codegen-cl/: Cargo.toml  build.rs
crates/corvid-codegen-cl/benches/: phase12_benchmarks.rs
crates/corvid-codegen-cl/runtime/: alloc.c  lists.c  shim.c  strings.c
crates/corvid-codegen-cl/src/: cdylib.rs  dataflow.rs  dup_drop.rs  errors.rs  latency_rc.rs  lib.rs  link.rs  lowering.rs  module.rs  ownership.rs  pair_elim.rs  scope_reduce.rs  target.rs
crates/corvid-codegen-cl/tests/: baseline_rc_counts.rs  cdylib_emission.rs  drop_specialization.rs  dup_drop_pipeline.rs  ffi_bridge_smoke.rs  pair_elim.rs  parity.rs  record_native.rs  replay_differential.rs  replay_mutation.rs  replay_native.rs  scope_reduce.rs  stack_maps.rs  verifier_audit.rs
crates/corvid-codegen-wasm/: Cargo.toml
crates/corvid-codegen-wasm/src/: companions.rs  error.rs  lib.rs
crates/corvid-codegen-wasm/tests/: wasmtime_parity.rs
crates/corvid-connector-runtime/: Cargo.toml
crates/corvid-connector-runtime/src/: auth.rs  calendar.rs  files.rs  github_real.rs  gmail.rs  gmail_real.rs  lib.rs  manifest.rs  ms365.rs  oauth2_refresh.rs  rate_limit.rs  real_client.rs  runtime.rs  slack.rs  slack_real.rs  tasks.rs  test_kit.rs  trace.rs  webhook_verify.rs
crates/corvid-connector-runtime/tests/: connector_fixtures.rs  executive_agent_connectors.rs  threat_corpus.rs
crates/corvid-differential-verify/: Cargo.toml
crates/corvid-differential-verify/src/: diff.rs  fuzz.rs  lib.rs  render.rs  rewrite.rs  shrink.rs
crates/corvid-differential-verify/tests/: rewrite_ast.rs
crates/corvid-driver/: Cargo.toml
crates/corvid-driver/src/: add_dimension.rs  adversarial.rs  approver.rs  build.rs  config_loader.rs  diagnostic.rs  dimension_artifact.rs  dimension_registry.rs  effect_diff.rs  eval_runner.rs  import_integrity.rs  law.rs  lib.rs  meta_verify.rs  modules.rs  native_ability.rs  native_cache.rs  package_conflicts.rs  package_lock.rs  package_manifest.rs  package_metadata.rs  package_policy.rs  package_registry.rs  package_version.rs  proof_replay.rs  render.rs  replay.rs  run.rs  scaffold.rs  spec_check.rs  spec_site.rs  test_runner.rs  tests.rs  trace_fresh.rs
crates/corvid-driver/tests/: custom_dimensions.rs  replay_orchestrator.rs  stdlib.rs  trace_fresh_orchestrator.rs
crates/corvid-ir/: Cargo.toml
crates/corvid-ir/src/: imports.rs  lib.rs  lower.rs  types.rs
crates/corvid-lsp/: Cargo.toml
crates/corvid-lsp/src/: analysis.rs  completion.rs  hover.rs  lib.rs  main.rs  navigation.rs  position.rs  server.rs  transport.rs
crates/corvid-macros/: Cargo.toml
crates/corvid-macros/src/: lib.rs
crates/corvid-macros/tests/: expand.rs
crates/corvid-repl/: Cargo.toml
crates/corvid-repl/src/: file_watch.rs  lib.rs  replay.rs  source_import.rs  step_hook.rs  trace_import.rs
crates/corvid-repl/tests/: replay.rs
crates/corvid-resolve/: Cargo.toml
crates/corvid-resolve/src/: depgraph.rs  errors.rs  lib.rs  modules.rs  repl.rs  resolver.rs  scope.rs
crates/corvid-runtime/: Cargo.toml  build.rs
crates/corvid-runtime/benches/: memory_runtime.rs
crates/corvid-runtime/runtime/: alloc.c  collector.c  entry.c  json.c  lists.c  shim.c  stack_maps.c  stack_maps_fallback.c  strings.c  verify.c  weak.c
crates/corvid-runtime/src/: abi.rs  adversarial.rs  approval_authorization.rs  approval_policy.rs  auth.rs  (+52 more)
crates/corvid-shadow-daemon/: Cargo.toml
crates/corvid-syntax/: Cargo.toml
crates/corvid-test-tools/: Cargo.toml
crates/corvid-types/: Cargo.toml
crates/corvid-vm/: Cargo.toml
examples/anthropic_hello/: Cargo.toml
examples/openai_hello/: Cargo.toml
examples/refund_bot_demo/: Cargo.toml  README.md  corvid.toml  tools.py
runtime/python/: README.md  pyproject.toml
(+1329 files in other folders)
