[workspace]
resolver = "2"
members = [
    "crates/corvid-syntax",
    "crates/corvid-ast",
    "crates/corvid-resolve",
    "crates/corvid-types",
    "crates/corvid-trace-schema",
    "crates/corvid-c-header",
    "crates/corvid-abi",
    "crates/corvid-ir",
    "crates/corvid-vm",
    "crates/corvid-repl",
    "crates/corvid-codegen-py",
    "crates/corvid-codegen-cl",
    "crates/corvid-codegen-wasm",
    "crates/corvid-runtime",
    "crates/corvid-macros",
    "crates/corvid-test-tools",
    "crates/corvid-driver",
    "crates/corvid-differential-verify",
    "crates/corvid-cli",
    "crates/corvid-host-compliance-tests",
    "crates/corvid-shadow-daemon",
    "crates/corvid-lsp",
    "examples/refund_bot_demo",
    "examples/openai_hello",
    "examples/anthropic_hello",
]

[workspace.package]
version = "0.0.1"
edition = "2021"
authors = ["Corvid Authors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/corvid-lang/corvid"
rust-version = "1.75"

[workspace.dependencies]
# parsing
chumsky = "0.9"
ariadne = "0.4"

# serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
time = { version = "0.3", features = ["formatting", "parsing", "serde"] }

# async
tokio = { version = "1", features = ["full"] }

# CLI
clap = { version = "4", features = ["derive"] }
anyhow = "1"

# testing
insta = "1"
tempfile = "3"

# Python interop (optional, opt-in per crate)
pyo3 = { version = "0.22", features = ["auto-initialize"] }

# internal crates
corvid-ast      = { path = "crates/corvid-ast" }
corvid-syntax   = { path = "crates/corvid-syntax" }
corvid-resolve  = { path = "crates/corvid-resolve" }
corvid-types    = { path = "crates/corvid-types" }
corvid-trace-schema = { path = "crates/corvid-trace-schema" }
corvid-c-header = { path = "crates/corvid-c-header" }
corvid-abi      = { path = "crates/corvid-abi" }

corvid-ir       = { path = "crates/corvid-ir" }
corvid-vm       = { path = "crates/corvid-vm" }
corvid-repl     = { path = "crates/corvid-repl" }
corvid-codegen-py = { path = "crates/corvid-codegen-py" }
corvid-codegen-cl = { path = "crates/corvid-codegen-cl" }
corvid-runtime  = { path = "crates/corvid-runtime" }
corvid-macros   = { path = "crates/corvid-macros" }
corvid-test-tools = { path = "crates/corvid-test-tools" }
corvid-driver   = { path = "crates/corvid-driver" }
corvid-differential-verify = { path = "crates/corvid-differential-verify" }
corvid-shadow-daemon = { path = "crates/corvid-shadow-daemon" }

# Proc-macro deps used by corvid-macros.
proc-macro2 = "1"
quote       = "1"
syn         = { version = "2", features = ["full", "extra-traits"] }

# Compile-time tool registration used by corvid-runtime + tool crates.
inventory   = "0.3"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

[profile.dev]
opt-level = 0
