[package]
name = "corvid-abi"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Phase 22 Corvid ABI descriptor emission."

[dependencies]
corvid-ast = { workspace = true }
corvid-resolve = { workspace = true }
corvid-types = { workspace = true }
corvid-ir = { workspace = true }
corvid-guarantees = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = "0.10"
libloading = "0.8"
# DSSE-signed ABI attestations. The cdylib build path signs the
# embedded descriptor here; corvid-cli's trace_diff signing
# primitives live on top of these for receipt signing too.
ed25519-dalek = { version = "2", features = ["std", "rand_core"] }
base64 = "0.22"
hex = "0.4"

[dev-dependencies]
corvid-syntax = { workspace = true }
tempfile = { workspace = true }
time = { workspace = true }
toml = { workspace = true }
