[package]
name = "corvid-c-header"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "C header emission for Corvid embedded library targets."

[dependencies]
corvid-ir = { workspace = true }
corvid-types = { workspace = true }

[dev-dependencies]
corvid-ast = { workspace = true }
corvid-resolve = { workspace = true }
tempfile = { workspace = true }
