[package]
name = "corvid-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "The `corvid` command-line compiler."

[[bin]]
name = "corvid"
path = "src/main.rs"

[dependencies]
corvid-driver = { workspace = true }
corvid-differential-verify = { workspace = true }
corvid-repl = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
