[package]
name = "corvid-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "The `corvid` command-line compiler."

[[bin]]
name = "corvid"
path = "src/main.rs"

[dependencies]
corvid-abi = { workspace = true }
corvid-driver = { workspace = true }
corvid-differential-verify = { workspace = true }
corvid-types = { workspace = true }
corvid-vm = { workspace = true }
corvid-repl = { workspace = true }
corvid-runtime = { workspace = true }
corvid-trace-schema = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tempfile = { workspace = true }
time = { version = "0.3", features = ["parsing", "formatting"] }
tokio = { workspace = true, features = ["rt", "macros"] }
libloading = "0.8"
sha2 = "0.10"
tar = "0.4"

[dev-dependencies]
cc = "1"
tempfile = { workspace = true }
target-lexicon = "0.13"
