[package]
name = "corvid-codegen-cl"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Cranelift-based native codegen for Corvid. AOT: IR → object file → system linker → native binary."

[dependencies]
corvid-ast      = { workspace = true }
corvid-ir       = { workspace = true }
corvid-resolve  = { workspace = true }
corvid-types    = { workspace = true }

cranelift-codegen  = "0.116"
cranelift-frontend = "0.116"
cranelift-module   = "0.116"
cranelift-object   = "0.116"
target-lexicon     = "0.13"

cc = "1"
anyhow = { workspace = true }
tempfile = "3"

[dev-dependencies]
corvid-syntax = { workspace = true }
corvid-runtime = { workspace = true }
corvid-vm      = { workspace = true }
tokio          = { workspace = true }
criterion      = "0.5"

[[bench]]
name = "phase12_benchmarks"
harness = false
