[package]
name = "corvid-codegen-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "WASM code generator for the Corvid compiler."

[dependencies]
corvid-ast = { workspace = true }
corvid-ir = { workspace = true }
corvid-resolve = { workspace = true }
corvid-types = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
wasm-encoder = "0.244.0"

[dev-dependencies]
corvid-syntax = { workspace = true }
wasmparser = "0.244.0"
