[package]
name = "corvid-codegen-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "WASM code generator for the Corvid compiler."

[dependencies]
corvid-ast = { workspace = true }
corvid-ir = { workspace = true }
corvid-resolve = { workspace = true }
corvid-types = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
wasm-encoder = "0.244.0"

[dev-dependencies]
corvid-ir = { workspace = true }
corvid-resolve = { workspace = true }
corvid-runtime = { workspace = true }
corvid-syntax = { workspace = true }
corvid-types = { workspace = true }
corvid-vm = { workspace = true }
tokio = { workspace = true }
wasmparser = "0.244.0"
wasmtime = "18.0.4"
