[package]
name = "corvid-connector-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared connector contracts, manifests, mock/replay/runtime support for Corvid."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
sha2 = "0.10"

[dev-dependencies]
tempfile = { workspace = true }
