[package]
name = "corvid-connector-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared connector contracts, manifests, mock/replay/runtime support for Corvid."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
sha2 = "0.10"
hmac = "0.12"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }

[dev-dependencies]
tempfile = { workspace = true }
