[package]
name = "corvid-differential-verify"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Cross-tier differential verification harness for Corvid effect profiles."

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
corvid-ast = { workspace = true }
corvid-codegen-cl = { workspace = true }
corvid-driver = { workspace = true }
corvid-ir = { workspace = true }
corvid-resolve = { workspace = true }
corvid-runtime = { workspace = true }
corvid-syntax = { workspace = true }
corvid-trace-schema = { workspace = true }
corvid-types = { workspace = true }
tempfile = "3"

[dev-dependencies]
proptest = "1"
