[package]
name = "corvid-driver"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Pipeline orchestrator for the Corvid compiler."

[dependencies]
corvid-ast = { workspace = true }
corvid-syntax = { workspace = true }
corvid-resolve = { workspace = true }
corvid-types = { workspace = true }
corvid-ir = { workspace = true }
corvid-codegen-py = { workspace = true }
corvid-codegen-cl = { workspace = true }
corvid-runtime = { workspace = true }
corvid-vm = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
ariadne = { workspace = true }

[dev-dependencies]
tempfile = "3"
serde_json = { workspace = true }
