[package]
name = "corvid-driver"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Pipeline orchestrator for the Corvid compiler."

[dependencies]
corvid-ast = { workspace = true }
corvid-syntax = { workspace = true }
corvid-resolve = { workspace = true }
corvid-types = { workspace = true }
corvid-ir = { workspace = true }
corvid-codegen-py = { workspace = true }
corvid-codegen-cl = { workspace = true }
corvid-c-header = { workspace = true }
corvid-abi = { workspace = true }
corvid-runtime = { workspace = true }
corvid-trace-schema = { workspace = true }
corvid-vm = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
ariadne = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
time = { workspace = true }
sha2 = "0.10"
ureq = "2"
url = "2"
semver = "1"

[dev-dependencies]
tempfile = "3"
serde_json = { workspace = true }
