[package]
name = "corvid-ir"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Intermediate representation for the Corvid compiler."

[dependencies]
corvid-ast = { workspace = true }
corvid-resolve = { workspace = true }
corvid-types = { workspace = true }

[dev-dependencies]
corvid-syntax = { workspace = true }
