[package]
name = "corvid-lsp"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Language server for Corvid (v0.5+)."

[dependencies]
corvid-driver = { workspace = true }
lsp-types = "0.95"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
url = "2"
