[package]
name = "corvid-repl"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Interactive REPL support for Corvid."

[dependencies]
corvid-ast = { workspace = true }
corvid-ir = { workspace = true }
corvid-resolve = { workspace = true }
corvid-runtime = { workspace = true }
corvid-syntax = { workspace = true }
corvid-types = { workspace = true }
corvid-vm = { workspace = true }
rustyline = { version = "17.0.2", features = ["with-file-history"] }
tokio = { workspace = true }
