[package]
name = "corvid-repl"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Interactive REPL support for Corvid."

[dependencies]
corvid-ast = { workspace = true }
corvid-ir = { workspace = true }
corvid-resolve = { workspace = true }
corvid-runtime = { workspace = true }
corvid-syntax = { workspace = true }
corvid-types = { workspace = true }
corvid-vm = { workspace = true }
async-trait = "0.1"
notify = { version = "7", features = ["macos_kqueue"] }
rustyline = { version = "17.0.2", features = ["with-file-history"] }
serde_json = { workspace = true }
tokio = { workspace = true }
