[package]
name = "corvid-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Native runtime for Corvid: tool dispatch, approvals, LLM adapters, tracing."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
futures = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
dotenvy = "0.15"

[features]
default = []
python = ["dep:pyo3"]

[dependencies.pyo3]
workspace = true
optional = true

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"
