[package]
name = "corvid-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Native runtime for Corvid: tool dispatch, approvals, LLM adapters, tracing."

[lib]
# `lib` (rlib) keeps Rust crates (corvid-driver, corvid-vm, etc.) able to depend
# on us as a normal Rust crate. `staticlib` produces a `.lib`/`.a` that the
# native codegen (corvid-codegen-cl) links into every compiled Corvid binary so
# generated code can call into tokio + the Corvid runtime. Phase 13 scope.
crate-type = ["lib", "staticlib"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
futures = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
dotenvy = "0.15"
# Phase 14: inventory collects `ToolMetadata` entries from every
# `#[tool]` macro invocation across linked user tool crates. Read once
# by `corvid_runtime_init` to build the effect-policy table.
inventory = { workspace = true }

[features]
default = []
python = ["dep:pyo3"]

[dependencies.pyo3]
workspace = true
optional = true

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"
