[package]
name = "corvid-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Native runtime for Corvid: tool dispatch, approvals, LLM adapters, tracing."

[lib]
# `lib` (rlib) keeps Rust crates (corvid-driver, corvid-vm, etc.) able to
# depend on us as a normal Rust crate. `staticlib` produces a `.lib`/`.a`
# that the native codegen links into every compiled Corvid binary so
# generated code can call into tokio and the Corvid runtime.
crate-type = ["lib", "staticlib"]

[build-dependencies]
# corvid-runtime's build.rs compiles the C runtime files (`runtime/*.c`)
# into the produced lib/staticlib via the `cc` crate. This keeps
# corvid-runtime self-contained: Rust callers do not need a separate C
# compile to resolve the C-side helpers (`corvid_alloc`,
# `corvid_release`, `corvid_string_from_bytes`, etc.) the ABI and FFI
# bridge layers use.
cc = "1"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true }
futures = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
dotenvy = "0.15"
# `inventory` collects `ToolMetadata` entries from every `#[tool]`
# macro invocation across linked user tool crates. Read once by
# `corvid_runtime_init` to build the effect-policy table.
inventory = { workspace = true }
corvid-trace-schema = { workspace = true }

[features]
default = []
python = ["dep:pyo3"]

[dependencies.pyo3]
workspace = true
optional = true

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"
criterion = "0.5"
corvid-ir = { workspace = true }
corvid-syntax = { workspace = true }
corvid-vm = { workspace = true }
corvid-resolve = { workspace = true }
corvid-types = { workspace = true }

[[bench]]
name = "memory_runtime"
harness = false
