[package]
name = "corvid-test-tools"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Mock `#[tool]` implementations for the parity harness. Test-only — not published, not part of the v1.0 user surface. Every tool reads its return value from a dedicated env var so the harness can vary behavior per fixture without rebuilding."

[lib]
# Staticlib so the parity harness can link it into Corvid-compiled
# binaries. The staticlib already bundles `corvid-runtime` as a
# transitive Rust dep (and the C runtime objects), so the parity
# harness routes the linker through `corvid_test_tools.lib` as the
# sole runtime-bearing Rust staticlib via the
# `CORVID_RUNTIME_STATICLIB_OVERRIDE` env var that
# `corvid-codegen-cl::link::link_binary` honors. That replacement
# avoids the duplicate-`std` LNK2005 that linking
# `corvid_test_tools.lib` alongside the standalone
# `corvid_runtime.lib` triggers on MSVC.
crate-type = ["staticlib"]
# Disable `cargo test`'s test-harness binary for this crate. The
# staticlib refs `corvid_string_from_bytes` which is only resolvable
# once the C runtime files are linked alongside — `cargo test` builds
# a plain test exe that skips those, producing an LNK2019. No tests
# live in this crate anyway (it's purely artefacts for the parity
# harness over in corvid-codegen-cl), so disabling is correct.
test = false
doctest = false

[dependencies]
corvid-runtime = { workspace = true }
corvid-macros  = { workspace = true }
tokio          = { workspace = true }
