[package]
name = "corvid-types"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Type system and effect checker for the Corvid language."

[dependencies]
corvid-ast = { workspace = true }
corvid-resolve = { workspace = true }
corvid-guarantees = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
corvid-syntax = { workspace = true }
corvid-guarantees = { workspace = true }
