[package]
name = "corvid-vm"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Tree-walking interpreter for the Corvid IR. Dev tier + correctness oracle for the native compiler."

[dependencies]
corvid-ast = { workspace = true }
corvid-ir = { workspace = true }
corvid-resolve = { workspace = true }
corvid-types = { workspace = true }

[dev-dependencies]
corvid-syntax = { workspace = true }
