[package]
name = "corvid-vm"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Tree-walking interpreter for the Corvid IR. Dev tier + correctness oracle for the native compiler."

[dependencies]
corvid-ast = { workspace = true }
corvid-ir = { workspace = true }
corvid-resolve = { workspace = true }
corvid-types = { workspace = true }
corvid-runtime = { workspace = true }
corvid-trace-schema = { workspace = true }
serde_json = { workspace = true }
async-recursion = "1"
async-trait = "0.1"
tokio = { workspace = true }

[dev-dependencies]
corvid-syntax = { workspace = true }
tokio = { workspace = true }
