[package]
name = "openai_hello"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Minimal real-network OpenAI demo: a single prompt call returning a typed Greeting."
publish = false

[[bin]]
name = "openai_hello"
path = "runner/main.rs"

[dependencies]
corvid-driver = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
