[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "corvid-runtime"
version = "0.0.1"
description = "Runtime library for Corvid-generated Python code."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT OR Apache-2.0"
authors = [{ name = "Corvid Authors" }]

dependencies = []

[project.optional-dependencies]
anthropic = ["anthropic>=0.40"]
dev = ["pytest>=8", "pytest-asyncio>=0.23"]

[tool.hatch.build.targets.wheel]
packages = ["corvid_runtime"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
