[package]
name = "refund_bot_corpus_gen"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Generate the time_to_audit benchmark corpus by driving refund_bot against varied tickets and writing each run's JSONL trace."
publish = false

[[bin]]
name = "refund_bot_corpus_gen"
path = "src/main.rs"

[dependencies]
corvid-driver = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
